--- a/manifest.json
+++ b/manifest.json
@@ -34,10 +34,11 @@
   "icons": {
     "256": "images/youtube-shorts-filter.png"
   },
+  "homepage_url": "https://github.com/s-lux/youtube-shorts-filter/releases",
   "manifest_version": 2,
   "name": "__MSG_extensionName__",
   "permissions": [
     "storage"
   ],
-  "version": "0.3.1"
+  "version": "0.3.2"
 }
